--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,19 +2,19 @@ name: CI
 
 # Controls when the workflow will run
 on:
-  push:
-    branches: [main]
-    paths:
-      - "version" # on version updates
-      - "Package.swift"
-      - "Package.resolved"
-      - "Tests/**"
-      - .github/workflows/ci.yml
-      - "scripts/**"
-  pull_request:
-    branches: [main]
-  schedule:
-    - cron: '0 */12 * * *' # Every 12 hours
+  # push:
+  #   branches: [main]
+  #   paths:
+  #     - "version" # on version updates
+  #     - "Package.swift"
+  #     - "Package.resolved"
+  #     - "Tests/**"
+  #     - .github/workflows/ci.yml
+  #     - "scripts/**"
+  # pull_request:
+  #   branches: [main]
+  # schedule:
+  #   - cron: '0 */12 * * *' # Every 12 hours
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -58,22 +58,22 @@ jobs:
       matrix:
         include:
           - platform: "macOS"
-          - platform: "iOS-simulator"
-            os_list: "18.4"
-            device_name: "iPhone 16"
-          - platform: "tvOS-simulator"
-            os_list: "18.2"
-            device_name: "Apple TV 4K (3rd generation) (at 1080p)"
-          # Became much slower on CI with macos-14 images, while working fine locally
-          # we will only build them
-          - platform: "watchOS-simulator"
-            os_list: "11.2"
-            device_name: "Apple Watch Series 10 (46mm)"
-            action: "build"
-          - platform: "visionOS-simulator"
-            os_list: "2.3"
-            device_name: "Apple Vision Pro"
-            action: "build"
+          # - platform: "iOS-simulator"
+          #   os_list: "18.4"
+          #   device_name: "iPhone 16"
+          # - platform: "tvOS-simulator"
+          #   os_list: "18.2"
+          #   device_name: "Apple TV 4K (3rd generation) (at 1080p)"
+          # # Became much slower on CI with macos-14 images, while working fine locally
+          # # we will only build them
+          # - platform: "watchOS-simulator"
+          #   os_list: "11.2"
+          #   device_name: "Apple Watch Series 10 (46mm)"
+          #   action: "build"
+          # - platform: "visionOS-simulator"
+          #   os_list: "2.3"
+          #   device_name: "Apple Vision Pro"
+          #   action: "build"
     steps:
       - name: Download Workspace
         uses: actions/download-artifact@v4
